--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
 
-    <string name="app_name" translatable="false">HOLALA</string>
+    <string name="app_name" translatable="false">MasChat Video</string>
 
     <!-- PLEASE KEEP THIS App ID IN SAFE PLACE -->
     <!-- Get your own App ID at https://dashboard.agora.io/ -->
@@ -27,7 +27,7 @@
     <string name="Interstitial_FacebbokAds" translatable="false">728146827632560_833272517119990</string>
     <string name="Banner_ads_facebook" translatable="false">IMG_16_9_APP_INSTALL#728146827632560_827277211052854</string>
 
-    <string name="ver_num" translatable="false">&#160;5.36&#160;</string>
+    <string name="ver_num" translatable="false">&#160;1.0&#160;</string>
 
 
     <string-array name="arr_languages">
@@ -47,7 +47,7 @@
     <string name="login_btn_facebook">Connect with Facebook</string>
     <string name="login_btn_phone">Connect with Phone Number</string>
     <string name="meet_nfun_npeople_nnow">Meet\nFun\nPeople\nNow</string>
-    <string name="log_into_holala">Log Into HOLALA</string>
+    <string name="log_into_holala">Log Into MasChat Video</string>
     <string name="enter_mobile_number">Enter mobile number</string>
     <string name="send_sms_code">Send SMS code</string>
     <string name="login_enter_code">Enter your code</string>
@@ -70,7 +70,7 @@
     <string name="strign_settings">Settings</string>
     <string name="notifications">Notifications</string>
     <string name="write_a_review">Write a Review</string>
-    <string name="about_holala">About HOLALA</string>
+    <string name="about_holala">About MasChat Video</string>
     <string name="send_segges">Send Suggestions</string>
     <string name="log_out">Log Out</string>
     <string name="string_language">Language</string>
@@ -134,7 +134,7 @@
     <string name="greater6name">your name should be Greater than 6</string>
     <string name="data_save_seccff">Data is saved successfully.</string>
     <string name="clear_cache">Clear Cache</string>
-    <string name="rating_title">Having fun on HOLALA?</string>
+    <string name="rating_title">Having fun on MasChat Video?</string>
     <string name="rating_des_android">Let us know with a positive review!</string>
     <string name="string_ok">OK</string>
     <string name="string_rules">Rules</string>
@@ -142,7 +142,7 @@
     <string name="string_community">Community</string>
     <string name="are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
     <string name="suggestions">Suggestions</string>
-    <string name="send_us_your_suggestions_about_holala_app">Send us your suggestions about HOLALA app.</string>
+    <string name="send_us_your_suggestions_about_holala_app">Send us your suggestions about MasChat Video app.</string>
     <string name="string_send">SEND</string>
     <string name="string_hint_sugges">Leave your suggestion here</string>
     <string name="pu_seggestoion">Put your suggestion please.</string>
@@ -155,11 +155,11 @@
     <string name="filter_nearby_gender_title">I Want to Meet</string>
     <string name="enable_gps">Try again</string>
     <string name="str_ops">Oops</string>
-    <string name="must_enable_location">Your device\'s location seems to be disabled, You need to allow access to location in order to use HOLALA. Please try again</string>
+    <string name="must_enable_location">Your device\'s location seems to be disabled, You need to allow access to location in order to use MasChat Video. Please try again</string>
     <string name="sorry_noflocarion">Sorry, your location isn\'t found.</string>
     <string name="fine_location_perm_granted">Location permission granted</string>
     <string name="fine_location_perms_denied">Location permission denied</string>
-    <string name="near_no_people">No people nearby you in this moment, Try again later</string>
+    <string name="near_no_people">No one is nearby you at the moment, Try again later</string>
     <string name="about_me">About</string>
     <string name="send_message">Send message</string>
     <string name="write_new_message">Write a message</string>
@@ -170,7 +170,7 @@
     <string name="profile_is_spam">Profile is Spam</string>
     <string name = "report_block"> Report &amp; Block</string>
     <string name="strg_confirm">Confirm</string>
-    <string name="lose_msg_unmatch">You will lose all your message with this user if you unmatch.</string>
+    <string name="lose_msg_unmatch">You will lose all your messages with this user if you unmatch.</string>
     <string name="are_you_sure">Are you sure?</string>
     <string name="searching">Searching…</string>
     <string name="log_fr_tlj_t">Looking for a friend to talk to</string>
@@ -183,7 +183,7 @@
     <string name="str_yarnc">you aren\'t connected.</string>
     <string name="st_wait_acce">Wait for your acceptance.</string>
     <string name="str_send_reau_seccss">Add request sent successfully.</string>
-    <string name="stt_send_resfr">Your match send this friend request, Do you want decline or accept?</string>
+    <string name="stt_send_resfr">Your match sent this friend request, Do you want to decline or accept?</string>
     <string name="tit_fr_rest">Friend Request</string>
     <string name="str_decl">Decline</string>
     <string name="g_s_c">Gift sent successfully.</string>
